only zhongguo event chains are left

--- a/localization/english/missions/chinese_empire_missions_l_english.yml
+++ b/localization/english/missions/chinese_empire_missions_l_english.yml
@@ -113,9 +113,9 @@
  me_chinese_empire_8_desc: "The hand of [ROOT.GetCountry.GetRuler.GetName] can be found throughout the #E Imperial Examination System#! that has just been implemented throughout the lands of [ROOT.GetCountry.GetName], for the wise ruler has a keen interest in ensuring that the bureaucracies of the country are filled with those deserving of the job.\n\nAn intimate knowledge of the laws of the land are required, but [ROOT.GetCountry.GetRuler.GetFirstName] wants advisors that are well-rounded individuals, so candidates must be intimately acquainted with the classics and must be able to recite the writings of the sages by heart.\n\nMany have attempted to graduate since the tests have been implemented, but not everyone passes the grueling series of exams. Thankfully for [ROOT.GetCountry.GetRuler.GetFirstName], the first cohort of graduates has arrived in the capital, ready to offer their services to the state."
  me_chinese_empire_8.a: "Welcome to your new home, my Lords...now let us get to work"
 
- me_chinese_empire_9_title:0 "$missions_chinese_empire_task_9$"
- me_chinese_empire_9_desc:0 ""
- me_chinese_empire_9.a:0 ""
+ me_chinese_empire_9_title: "$missions_chinese_empire_task_9$"
+ me_chinese_empire_9_desc: "Now that the #E Imperial Road#! system that was demanded by [ROOT.GetCountry.GetRuler.GetName] has been finished, the entirety of [ROOT.GetCountry.GetName] is benefitting from this initiative, which has done wonders to connect the far-flung corners of the Empire.\n\nNot only can the Imperial Armies quickly reach any troublesome regions within the Empire, but merchants and travelers are also using the highways for their own purposes. In short; the lands prosper, and everyone thanks the [ROOT.GetCountry.GetRulerTitle] for investing into infrastructure."
+ me_chinese_empire_9.a: "May these roads service the people well"
 
  me_chinese_empire_10_title:0 "$missions_chinese_empire_task_10$"
  me_chinese_empire_10_desc:0 ""
@@ -167,49 +167,49 @@
  me_chinese_empire_1200_desc:0 ""
  me_chinese_empire_1200.a:0 ""
 
- me_chinese_empire_13_title:0 "$missions_chinese_empire_task_13$"
- me_chinese_empire_13_desc:0 ""
- me_chinese_empire_13.a:0 ""
+ me_chinese_empire_13_title: "$missions_chinese_empire_task_13$"
+ me_chinese_empire_13_desc: "Now that the internal situation of [ROOT.GetCountry.GetName] has stabilized to the point that [ROOT.GetCountry.GetRuler.GetName] can afford to turn [ROOT.GetCountry.GetRuler.GetHerHis] attention elsewhere, it has been decided that the Imperial Armies shall march to the east. The [ROOT.GetCountry.GetRulerTitle] has decreed that no barbarous kingdoms will be allowed to be on the periphery of the glorious [ROOT.GetCountry.GetAdjective] imperium - the region of #E Jin#! will be ours."
+ me_chinese_empire_13.a: "The eastern peninsula belongs to us, clearly..."
 
- me_chinese_empire_14_title:0 "$missions_chinese_empire_task_14$"
- me_chinese_empire_14_desc:0 ""
- me_chinese_empire_14.a:0 ""
+ me_chinese_empire_14_title: "$missions_chinese_empire_task_14$"
+ me_chinese_empire_14_desc: "The undefeated Imperial Armies are continuing their unprecedented conquests of the enemies of [ROOT.GetCountry.GetRulerTitle] [ROOT.GetCountry.GetRuler.GetName], this time turning their formidable attentions to the south of [ROOT.GetCountry.GetName].\n\nUpon hearing about the growing civilizations that opposed [ROOT.GetCountry.GetRuler.GetHerHis] will, the [ROOT.GetCountry.GetRulerTitle] made an off-hand remark that would prove to be prescient."
+ me_chinese_empire_14.a: "This so-called 'Kingdom' shall be ground to dust"
 
- me_chinese_empire_15_title:0 "$missions_chinese_empire_task_15$"
- me_chinese_empire_15_desc:0 ""
- me_chinese_empire_15.a:0 ""
+ me_chinese_empire_15_title: "$missions_chinese_empire_task_15$"
+ me_chinese_empire_15_desc: "Although the people of [ROOT.GetCountry.GetName] are said to be blessed with an abundance of wealth, where even the lowliest peasant working in the field can afford to drape himself in robes of silk, this is an exaggeration. What is true, however, is that [ROOT.GetCountry.GetRuler.GetName] has ensured that the production of silk @silk! and salt @salt! have reached the highest levels they ever have."
+ me_chinese_empire_15.a: "Salt and silk are both requirements for a refined life"
 
- me_chinese_empire_16_title:0 "$missions_chinese_empire_task_16$"
- me_chinese_empire_16_desc:0 ""
- me_chinese_empire_16.a:0 ""
+ me_chinese_empire_16_title: "$missions_chinese_empire_task_16$"
+ me_chinese_empire_16_desc: "[ROOT.GetCountry.GetRuler.GetName] has obtained a reputation for having high standards, and the [ROOT.GetCountry.GetRulerTitle] has not done anything to dispel this notion. It is true that the court at [ROOT.GetCountry.GetCapital.GetName] is filled with luminaries from all across [ROOT.GetCountry.GetName], and a staggering amount of talented individuals have dedicated their lives to the service of the [ROOT.GetCountry.GetRulerTitle]. The Imperial Bureaucracy has never before been staffed by men of such ability, and the entire nation is benefitting from this circumstance."
+ me_chinese_empire_16.a: "Only those worthy of the roles will be employed in [ROOT.GetCountry.GetName]"
 
- me_chinese_empire_17_title:0 "$missions_chinese_empire_task_17$"
- me_chinese_empire_17_desc:0 ""
- me_chinese_empire_17.a:0 ""
+ me_chinese_empire_17_title: "$missions_chinese_empire_task_17$"
+ me_chinese_empire_17_desc: "In another brilliant masterstroke by the indomitable [ROOT.GetCountry.GetRuler.GetName], the [ROOT.GetCountry.GetRulerTitle] has issued orders for #E Courts of Law#! to be built throughout [ROOT.GetCountry.GetName] that shall serve as #E Grand Commanderies#! for our troops.\n\nNot only will this ensure that our fighting forces have local officials carefully coordinating their movements, but it shall do wonders to increase provincial loyalty. It is said that the common people praise the name of [ROOT.GetCountry.GetRuler.GetFirstName] for [ROOT.GetCountry.GetRuler.GetHerHis] fairness and attention to detail."
+ me_chinese_empire_17.a: "Two birds with one stone, as the saying goes..."
 
- me_chinese_empire_18_title:0 "$missions_chinese_empire_task_18$"
- me_chinese_empire_18_desc:0 ""
- me_chinese_empire_18.a:0 ""
+ me_chinese_empire_18_title: "$missions_chinese_empire_task_18$"
+ me_chinese_empire_18_desc: "Who among us can remember a time as peaceful and prosperous as this era that was ushered in by the proclamation of the [ROOT.GetCountry.GetAdjective] [ROOT.GetCountry.GetRulerTitle]? Not only has [ROOT.GetCountry.GetRuler.GetName] defeated the many enemies of [ROOT.GetCountry.GetName], but [ROOT.GetCountry.GetRuler.GetSheHe] has also ensured an inner harmony within our borders that has secured an eternal peace\n\nIt is said that there are no murderous plots against the [ROOT.GetCountry.GetRulerTitle], for everyone is pleased with [ROOT.GetCountry.GetRuler.GetHerHis] efforts to rule - no one within the realm is disloyal, but lives to serve the state. Truly, we are blessed beyond reckoning to live during such tranquil times."
+ me_chinese_empire_18.a: "I take my responsiblities and obligations seriously"
 
- me_chinese_empire_19_title:0 "$missions_chinese_empire_task_19$"
- me_chinese_empire_19_desc:0 ""
- me_chinese_empire_19.a:0 ""
+ me_chinese_empire_19_title: "$missions_chinese_empire_task_19$"
+ me_chinese_empire_19_desc: "Our foreign exports have exploded, taking on a life of their own as the many markets of the barbarian Kings desire our trade goods. The amount of gold that we receive over our silk @silk! trade is practically beyond reckoning, and many merchants lead their caravans across the vast expanse of our territory, utilizing the system of highways that have colloquially become known as the #E Silk Road#!.\n\nNeedless to say, [ROOT.GetCountry.GetRuler.GetName] has taken a keen interest in hearing about the record sums our treasurers are taking in, and remains eager to increase our revenues."
+ me_chinese_empire_19.a: "Send merchants to the provinces to ensure high profits!"
 
- me_chinese_empire_20_title:0 "$missions_chinese_empire_task_20$"
- me_chinese_empire_20_desc:0 ""
- me_chinese_empire_20.a:0 ""
+ me_chinese_empire_20_title: "$missions_chinese_empire_task_20$"
+ me_chinese_empire_20_desc: "Because of the efforts of the [ROOT.GetCountry.GetAdjective] [ROOT.GetCountry.GetRulerTitle] to ensure that a #E Standard Language#! has been promoted throughout [ROOT.GetCountry.GetName], our people are closer knit than they ever have been before.\n\nAn innovation that has ensured that this initiative was a success has undoubtedly been the introduction of #E paper#! @papyrus!, which has streamlined the process and has made it easier. To meet the demand that the government has, some of our provinces have begun to produce papyrus."
+ me_chinese_empire_20.a: "We are blessed beyond reckoning"
 
- me_chinese_empire_21_title:0 "$missions_chinese_empire_task_21$"
- me_chinese_empire_21_desc:0 ""
- me_chinese_empire_21.a:0 ""
+ me_chinese_empire_21_title: "$missions_chinese_empire_task_21$"
+ me_chinese_empire_21_desc: "Now that we have a proper navy and the will to explore the oceans, the [ROOT.GetCountry.GetAdjective] [ROOT.GetCountry.GetRulerTitle] [ROOT.GetCountry.GetRuler.GetName] has ordered the Imperial Navies to sail to the east. No longer shall the sea be an impediment to our forces - our dominion is bound to encompass the world!"
+ me_chinese_empire_21.a: "The distant islands belong to [ROOT.GetCountry.GetName]"
 
- me_chinese_empire_22_title:0 "$missions_chinese_empire_task_22$"
- me_chinese_empire_22_desc:0 ""
- me_chinese_empire_22.a:0 ""
+ me_chinese_empire_22_title: "$missions_chinese_empire_task_22$"
+ me_chinese_empire_22_desc: "After many years of constructing temples and shrines and ensuring that these efforts were protected by law, [ROOT.GetCountry.GetRuler.GetName] can now safely say that the spiritual stain of warfare and destructions have been removed from the fabric of the [ROOT.GetCountry.GetAdjective] state.\n\nIt is widely acknowledged that [ROOT.GetCountry.GetRuler.GetFirstName] rules over a #E Pure Land#!, one that will be studied and emulated in the centuries to come."
+ me_chinese_empire_22.a: "The gods have placed their hand upon me"
 
- me_chinese_empire_23_title:0 "$missions_chinese_empire_task_23$"
- me_chinese_empire_23_desc:0 ""
- me_chinese_empire_23.a:0 ""
+ me_chinese_empire_23_title: "$missions_chinese_empire_task_23$"
+ me_chinese_empire_23_desc: "After many years of laboring, the glorious [ROOT.GetCountry.GetAdjective] [ROOT.GetCountry.GetRulerTitle] [ROOT.GetCountry.GetRuler.GetName] has finally completed all of the reforms that [ROOT.GetCountry.GetRuler.GetSheHe] set out long ago to achieve.\n\nAll throughout the lands of [ROOT.GetCountry.GetName], [ROOT.GetCountry.GetRuler.GetFirstName] is praised as the greatest of all [ROOT.GetCountry.GetRulerTitle] to rule over the #E Middle Kingdom#!, and there is no doubt within [ROOT.GetCountry.GetRuler.GetFirstName]'s mind that they have changed the course of history. The towns and cities prosper, the armies protect the peace, trade flows into [ROOT.GetCountry.GetCapital.GetName], the proper religious rites are observed, and our civilization shines above all others."
+ me_chinese_empire_23.a: "All glory to the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] and [ROOT.GetCountry.GetRulerTitle] [ROOT.GetCountry.GetRuler.GetFirstName]!"
  
  me_chinese_empire_24_title:0 "$missions_chinese_empire_task_24$"
  me_chinese_empire_24_desc:0 ""
