--- a/localization/english/missions/zhou_missions_l_english.yml
+++ b/localization/english/missions/zhou_missions_l_english.yml
@@ -1,74 +1,74 @@
 ﻿l_english:
 
  zhou_missions:0 "Sons of Heaven"
- zhou_missions_DESCRIPTION:0 "Mission description"
- zhou_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when"
- zhou_missions_BUTTON_TOOLTIP:0 ""
+ zhou_missions_DESCRIPTION:0 "The mighty #E Zhou Dynasty#! was once the greatest entity in the world. Spanning back to the #T Age of Bronze#!, the #E Zhou Dynasty#! was founded in 1046 BCE and yet still lives. However, the collapse of central authority is more than apparent. In reality, the surviving state of the #E Zhou#! is naught but a combination of lip service from the #E Qin#!, #E Chu#!, #E Qi#!, #E Wei#!, #E Zhao#!, and #E Yan#!; while actual authority doesn't stretch far from the capital at #E Chengzhou#!.\n\nThe #E Zhou Dynasty#! would be fated to be superceded by the #E Qin#! and then the #E Han#! dynasties, and many Chinese philosophers would point to the decadence and mishandling of the #E Zhou Dynasty#!, praising instead the #E Shang#! and mythical #E Xia#! dynasties. However, where there is an ember, there can be born a flame. And the embers of the dynasty have yet to be extinguished. Can the #E Zhou Dynasty#! reclaim its imperial mantle, or will the #Y Sons of Heaven#! be passed on to the next worthy candidate."
+ zhou_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when #Y Zhou#! has reclaimed its imperial might."
+ zhou_missions_BUTTON_TOOLTIP:0 "Rise to the Heavens."
 
  #Missions
 
  zhou_missions_task_1:0 "End the Depression"
- zhou_missions_task_1_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
+ zhou_missions_task_1_DESC:0 "#E King Yan I Ji#!, better known as #E King Nan#!, was the last king of the #E Zhou Dynasty#!... but history shall unfold differently this time. Let us heal the wounds of reality that have left #E Yan Ji#! scarred.\n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
 
- zhou_missions_task_2:0 "One Zhou, two Graves"
- zhou_missions_task_2_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil9!"
+ zhou_missions_task_2:0 "One Zhou, Two Graves"
+ zhou_missions_task_2_DESC:0 "The disunity amongst the three #E Zhou#! capitals must end before all else. We must defeat the two upstarts, and proclaim our city as the true capital, the returners of the #E Zhourite#! central authority!\n\n\n\n\n\n\n\n\n\n\n@china_mil9!"
 
  zhou_missions_task_3:0 "Sway the Han"
- zhou_missions_task_3_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil15!"
+ zhou_missions_task_3_DESC:0 "It is a common fear in the noble court that the #E Qin#! will attack us. The #E Scribe Yan#! has advised us that we should ask the #E Han#! to cede their territory into our rule. We shall do this by swaying them to join our realm as a #Y Feudatory#!.\n\n\n\n\n\n\n\n\n\n\n@china_mil15!"
 
  zhou_missions_task_4:0 "Punish Chu"
- zhou_missions_task_4_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil4!"
+ zhou_missions_task_4_DESC:0 "From #E 961-957 BCE#!, the #E King Zhao#! of #E Chu#! would wage war on the #E Zhou Dynasty#!, causing an innumerable amount of casualties. #E King Zhao#! would die, and #E Zhou#! would expand, however, the damage was done. From henceforth, the #E Chu#! would be a defacto independent and powerful #E Chinese#! state.\n\n\n\n\n\n\n\n\n\n\n@china_mil4!"
 
  zhou_missions_task_5:0 "Control Wei"
- zhou_missions_task_5_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil7!"
+ zhou_missions_task_5_DESC:0 "The #E Duke Hui of Wei#! was the first between #E Han#!, #E Zhao#!, and #E Wei#! to declare themselves kings. After that, the former vassals of #E Zhou#! would become more and more independent. We must reign in the #E Wei#! once more in order to solidfy our growing centralization.\n\n\n\n\n\n\n\n\n\n\n@china_mil7!"
 
  zhou_missions_task_6:0 "Challenge Zhao"
- zhou_missions_task_6_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil10!"
+ zhou_missions_task_6_DESC:0 "With both the #E Han#! and #E Wei#! now being subjects of ours once more, our eyes turn to #E Zhao#!. The #E Zhao#!, however, have carved out a large kingdom of their own, with the ability to tame barbarian subjects of their own. It will take a true proof of our might in order to bring the #E Zhao#! back into the fold.\n\n\n\n\n\n\n\n\n\n\n@china_mil10!"
 
  zhou_missions_task_7:0 "Subjugate Song"
- zhou_missions_task_7_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@east_steppemil10!"
+ zhou_missions_task_7_DESC:0 "It is said that long ago, in the times of the #E Shang Dynasty#!'s decline, the #E King Zhou of Shang#! was defeated in the #Y Battle of Muye#!, marking the beginning of the #E Zhou Dynasty#!. Following this, the #E Zhou#! enfeoffed a member of the #E Shang Dynasty#! as the #E Duke of Song#!.\n\nWhile circumstances are far different now, an independent state of #E Song#! exists once more. And how fitting would it be to once more enfeoff another #E Duke of Song#!.\n\n\n\n\n\n\n\n\n\n\n@east_steppemil10!"
 
  zhou_missions_task_8:0 "Dismantle Chu"
- zhou_missions_task_8_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@east_steppemil9!"
+ zhou_missions_task_8_DESC:0 "The lands of the #E Chu#! must be thoroughly conquered. While they have spent the last half millenia growing their power and acting in complete independence, they have left their homelands for the taking. The end of this trecherous state will be a great achievement for our reborn #E Zhourite#! state, avenging the losses we felt so many years ago.\n\n\n\n\n\n\n\n\n\n\n@east_steppemil9!"
 
  zhou_missions_task_9:0 "Unite Jin"
- zhou_missions_task_9_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil14!"
+ zhou_missions_task_9_DESC:0 "The #E Jin#! state was divided amongst the #E Han#!, #E Zhao#!, and #E Wei#!; ushering in the #Y Warring States Period#!. It is time to decide, now that we hold the lands formerly owned by #E Jin#!, what to do with them. The relationship with #E Jin#! has always been a changing one, and now we will narrate the future of these territories.\n\n\n\n\n\n\n\n\n\n\n@china_mil14!"
 
  zhou_missions_task_10:0 "Curtail Qin"
- zhou_missions_task_10_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil7!"
+ zhou_missions_task_10_DESC:0 "The #E Qin#! state was the best poised state to end the #E Zhou Dynasty#! and usher in their own #E Qin Dynasty#!. It is imperative above all else that we squash these dreams as soon as we can, lest their dreams cease to be just dreams.\n\n\n\n\n\n\n\n\n\n\n@china_mil7!"
 
  zhou_missions_task_11:0 "Check the East"
- zhou_missions_task_11_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@east_steppemil8!"
+ zhou_missions_task_11_DESC:0 "The lands in the east were once an integral part of the #E Zhou Dynasty#!. However, during the chaos proceeding the death of #E King You of Zhou#!, the #E Qi#! state would end up independent and conquer much of the region of #Y Qing#!. It is finally time to reconquer the east.\n\n\n\n\n\n\n\n\n\n\n@east_steppemil8!"
 
  zhou_missions_task_12:0 "Yolking Yi"
- zhou_missions_task_12_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@tibet_mil8!"
+ zhou_missions_task_12_DESC:0 "The barbarian tribes of the #E Yiqu#! and other #E Rong#! people threaten the integrity of #E China#! itself. Even in times of our might, the #E Rong#! people harassed our borders. And of course, the end of the #E Western Zhou#! was in large part because of the alliance with the #E Quanrong#! barbarians. We will control this region to prevent any such nonsense to occur while we are still yet to be fully reborn.\n\n\n\n\n\n\n\n\n\n\n@tibet_mil8!"
 
  zhou_missions_task_13:0 "End the Qin"
- zhou_missions_task_13_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil3!"
+ zhou_missions_task_13_DESC:0 "The #E Qin Dynasty#! will be ended before it is born. In our timeline, then #E Qin#! would ultimately end the #E Zhou Dynasty#! once and for all. Yet now, it shall be the opposite. We must destroy the #E Qin#!!\n\n\n\n\n\n\n\n\n\n\n@china_mil3!"
 
  zhou_missions_task_14:0 "Yeet Yan"
- zhou_missions_task_14_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil1!"
+ zhou_missions_task_14_DESC:0 "The #E Ji#! family of #E Yan#! would proclaim themselves the successors to the #E Zhou Dynasty#! after the fall of #E Chengzhou#! to the #E Qin#! in 256 BCE. As they seem so eager to claim themselves as #E Zhou#! already, they will surely be happy to fall under our direct control.\n\n\n\n\n\n\n\n\n\n\n@china_mil1!"
 
  zhou_missions_task_15:0 "Zhou Bureaucracy"
- zhou_missions_task_15_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
+ zhou_missions_task_15_DESC:0 "#Y Gong#!, #Y Hou#!, #Y Bo#!, #Y Zi#!, and #Y Nan#!. These were the different royal ranks within the #E Zhourite Bureaucracy#!. The corresponded with #Y Duke#!, #Y Marquis#!, #Y Count#!, #Y Viscount#!, and #Y Baron#! respectively. In order to promote such a system now, we must have the necessary infrastructure to do so.\n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
 
  zhou_missions_task_16:0 "Agricultural Advancements"
- zhou_missions_task_16_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil11!"
+ zhou_missions_task_16_DESC:0 "The #E Zhou Dynasty#! was at the forefront of agricultural development and technologies, often being directly directed by the government itself. #Y Hydraulic Engineering#! to help with irrigation, #Y Reservoirs#! to alleviate the reliance on rain, and #Y Canal Systems#! to control the very flow of water itself.\n\n\n\n\n\n\n\n\n\n\n@china_mil11!"
 
  zhou_missions_task_17:0 "Royal Inspectors"
- zhou_missions_task_17_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil6!"
+ zhou_missions_task_17_DESC:0 "As our domain expands, we have found use, once more, of #E Royal Inspectors#!. This will allow us to more efficiently monitor taxes, laws, and more of the tedious things that come with running an empire. Tedious though they might be, no one can deny their incredible usefulness. \n\n\n\n\n\n\n\n\n\n\n@china_mil6!"
 
  zhou_missions_task_18:0 "Single Code of Law"
- zhou_missions_task_18_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@celt_mil1!"
+ zhou_missions_task_18_DESC:0 "A centralized state must have a centralized code of law. This will help to make sure we never again collapse into #E Warring States#!, as it will surely be against the law to do so!\n\n\n\n\n\n\n\n\n\n\n@celt_mil1!"
 
  zhou_missions_task_19:0 "Unified Currency and Measures"
- zhou_missions_task_19_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@egypt_mil19!"
+ zhou_missions_task_19_DESC:0 "In the past, we have never had a truly centralized form of currency nor measures. In this new era, we now realize how important they can be for governing a centralized empire. This will complete the final step in our growing centralized authority.\n\n\n\n\n\n\n\n\n\n\n@egypt_mil19!"
 
  zhou_missions_task_20:0 "The Great Assembly"
- zhou_missions_task_20_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil13!"
+ zhou_missions_task_20_DESC:0 "We must call upon all teachers, scholars, and philosophers in our lands for a #Y Great Assembly#!. We have become the preimminent power of #E China#! once more, and we must decide on how we govern these lands. Will we return to a system that once worked, or shall we forge a new system for the new age?\n\n\n\n\n\n\n\n\n\n\n@china_mil13!"
 
  zhou_missions_task_21:0 "Restore the Mandate"
- zhou_missions_task_21_DESC:0 "\n\n\n\n\n\n\n\n\n\n\n@china_mil8!"
+ zhou_missions_task_21_DESC:0 "The #E Mandate of Heaven#! is a form of legitimization of an empire in #E China#!. And the heavens speak clearly; the return of the #E Zhou Dynasty#! has come. We have proven we are the #Y Sons of Heaven#!. The #E Mandate#! rests with us once more, and forever more it shall continue to rest with us.\n\n\n\n\n\n\n\n\n\n\n@china_mil8!"
 
 
  #Events
@@ -268,9 +268,9 @@
  me_zhou_21_desc:0 ""
  me_zhou_21.a:0 ""
  
- me_zhou_90_title:0 ""
- me_zhou_90_desc:0 ""
- me_zhou_90.a:0 ""
+ me_zhou_90_title:0 "Sons of Heaven"
+ me_zhou_90_desc:0 "The fall of the #E Western Zhou#! state was in many ways the beginning of the end. In the 7th century BCE, the final #E Western Zhou#! king, #E King You of Zhou#! replaced his consort with a concubine. The former queen's powerful father would lead a revolt in retaliation, joining with the #E Quanrong#! barbarians, and ultimately sacking the capital and killing #E King You#!. Afterwards, the crown prince #E Yiju#! would be selected as the new king. His new capital was to be #E Chengzhou#!, with the western capital being #E Wangcheng#! and eastern being #E Gong#!. Each city now is decentralized from being formerly united under one #E Zhou#! state. If there is to be a revival of #E Zhou#! dominance, all three capitals must be united."
+ me_zhou_90.a:0 "And so unite them we will."
 
  #Tooltips
  zhou_employer_is_target_employer_tt: "[ROOT.GetCountry.GetRuler.GetName] has at least one #Y Friend#! in #Y [GetCountry('WEI').GetName]#! (must not be a #Y Close Relative#! of [GetCountry('WEI').GetRuler.GetName], #Y Master of the Guard#!, or #Y Bodyguard#!)."
@@ -278,14 +278,14 @@
  zhou_missions_task_20_loyal_governors_generals_officers: "We have no governor, general or officer with a loyalty below 70."
  zhou_missions_task_20_decide_governance: "We will be able to decide whether we want to centralize or decentralize our territory."
  zhou_missions_task_9_decide_fate_of_jin: "We will decide the fate of Jin."
- zhou_missions_task_2_claims: "TODO CLAIMS"
- zhou_missions_task_4_claims: "TODO CLAIMS"
- zhou_missions_task_6_claims: "TODO CLAIMS"
- zhou_missions_task_6_claims_2: "TODO CLAIMS"
- zhou_missions_task_7_claims: "TODO CLAIMS"
- zhou_missions_task_8_claims: "TODO CLAIMS"
- zhou_missions_task_10_claims: "TODO CLAIMS"
- zhou_missions_task_11_claims: "TODO CLAIMS"
+ zhou_missions_task_2_claims: "Gain claims on [GetProvince('(int32)8384').GetArea.GetName|Y], [GetProvince('(int32)8393').GetArea.GetName|Y], [GetProvince('(int32)8958').GetArea.GetName|Y], and [GetProvince('(int32)8407').GetArea.GetName|Y]."
+ zhou_missions_task_4_claims: "Gain claims on the territories of [GetCountry('SNG').GetName|Y]."
+ zhou_missions_task_6_claims: "Gain claims on [GetProvince('(int32)8316').GetArea.GetName|Y], [GetProvince('(int32)8329').GetArea.GetName|Y], [GetProvince('(int32)8340').GetArea.GetName|Y], [GetProvince('(int32)8360').GetArea.GetName|Y], and [GetProvince('(int32)8285').GetArea.GetName|Y]."
+ #zhou_missions_task_6_claims_2: "TODO CLAIMS"
+ zhou_missions_task_7_claims: "Gain claims on the [GetProvince('(int32)8509').GetArea.GetRegion.GetName|Y]"
+ zhou_missions_task_8_claims: "Gain claims on the territories of [GetCountry('CHU').GetName|Y]\nGain claims on the [GetProvince('(int32)8983').GetArea.GetRegion.GetName|Y]"
+ zhou_missions_task_10_claims: "Gain claims on [GetProvince('(int32)8254').GetArea.GetName|Y], [GetProvince('(int32)8271').GetArea.GetName|Y], [GetProvince('(int32)8566').GetArea.GetName|Y], and [GetProvince('(int32)8577').GetArea.GetName|Y]."
+ zhou_missions_task_11_claims: "Gain claims on the [GetProvince('(int32)8722').GetArea.GetRegion.GetName|Y]"
  me_zhou_20_annex_all: "We will annex all of our Chinese subjects, thereby upsetting the local population."
  zhou_missions_task_6_challenge_zhao_for_throne: "Our champion will challenge the ruler of Zhao to a duel that will decide the fate of Zhao."
  
