oh the event loc initial for zhou

--- a/localization/english/missions/zhou_missions_l_english.yml
+++ b/localization/english/missions/zhou_missions_l_english.yml
@@ -17,7 +17,7 @@
  zhou_missions_task_3_DESC:0 "It is a common fear in the noble court that the #E Qin#! will attack us. The #E Scribe Yan#! has advised us that we should ask the #E Han#! to cede their territory into our rule. We shall do this by swaying them to join our realm as a #Y Feudatory#!.\n\n\n\n\n\n\n\n\n\n\n@china_mil15!"
 
  zhou_missions_task_4:0 "Punish Chu"
- zhou_missions_task_4_DESC:0 "From #E 961-957 BCE#!, the #E King Zhao#! of #E Chu#! would wage war on the #E Zhou Dynasty#!, causing an innumerable amount of casualties. #E King Zhao#! would die, and #E Zhou#! would expand, however, the damage was done. From henceforth, the #E Chu#! would be a defacto independent and powerful #E Chinese#! state.\n\n\n\n\n\n\n\n\n\n\n@china_mil4!"
+ zhou_missions_task_4_DESC:0 "From #E 961-957 BCE#!, the #E King Zhao#! of #E Zhou#! would wage war on the #E Chu Dynasty#!, causing an innumerable amount of casualties and losses due to a disasterous accident and unfamiliar climate. In spite of #E Zhourite#! expansion, #E King Zhao#! would perish and the damage was done. From henceforth, the #E Chu#! would be a defacto independent and powerful #E Chinese#! state, and the #E Zhou#! would start a period of chronic decline.\n\n\n\n\n\n\n\n\n\n\n@china_mil4!"
 
  zhou_missions_task_5:0 "Control Wei"
  zhou_missions_task_5_DESC:0 "The #E Duke Hui of Wei#! was the first between #E Han#!, #E Zhao#!, and #E Wei#! to declare themselves kings. After that, the former vassals of #E Zhou#! would become more and more independent. We must reign in the #E Wei#! once more in order to solidfy our growing centralization.\n\n\n\n\n\n\n\n\n\n\n@china_mil7!"
@@ -81,20 +81,20 @@
  me_zhou_2.a:0 ""
 
  me_zhou_3_title:0 "$zhou_missions_task_3$"
- me_zhou_3_desc:0 ""
- me_zhou_3.a:0 ""
+ me_zhou_3_desc:0 "With the acceptance of the deal, the wedding between the young #E Zhourite#! bride and the #E King of Han#! is set in stone. While the happy couple enjoy a grand celebration, the #E King of Zhou#! is arguably even happier. It was not so long ago that the #E Zhou#! had to admit the independence of #E Han#!, as well as the other two constituent #E Jin#! states. And now, a glorious rebirth starts with this matrimonious union."
+ me_zhou_3.a:0 "What a #E Han#!dsome dowry."
  
- me_zhou_300_title:0 ""
- me_zhou_300_desc:0 ""
- me_zhou_300.a:0 ""
+ me_zhou_300_title:0 "A Grand Proposal"
+ me_zhou_300_desc:0 "The urgency of affairs is paramount within the #E Zhou Dynasty#! right now. The rising #E Qin#! to the west, the trecherous #E Chu#! to the south, and the remnants of the #E Jin#! in the form of #E Wei, Zhao, and Han#! to the north. Of these, the #E Qin#! are of the most concern within the #E Zhourite#! court. A solution was proposed; we will offer to the #E Han#! something he cannot a refuse. A #E Zhourite#! bride, in exchange for a return of #E Han#! loyalty!"
+ me_zhou_300.a:0 "Surely, they cannot refuse such an offer."
  
  me_zhou_301_title:0 ""
  me_zhou_301_desc:0 ""
  me_zhou_301.a:0 ""
 
  me_zhou_4_title:0 "$zhou_missions_task_4$"
- me_zhou_4_desc:0 ""
- me_zhou_4.a:0 ""
+ me_zhou_4_desc:0 "Over 600 years ago, the #E King Yuxiong of Chu#! submitted to the #E King Wen of Zhou#!, cementing a loyalty that was never to be disrupted... or so thought the #E Zhourites#!. The #E Chu#!, in the 9th century BCE, attacked via a vassal unto the #E Zhou#! territory. As #E King Zhao of Zhou#! retaliated, drawing the forces of the #E Six Armies of the West#!, disaster struck. The unfamiliar climate had utterly confounded #E Zhao#!, and as he retreated across the #E Han River#!, the bridge collapsed! In the end, #E King Zhao#! was killed, along with half of the royal forces. This humiliation and defeat was to spell the end of the zenith of #E Zhourite#! power. It lead to a decline that plagues the mind of the #E Zhou#! even to this day.\n\nAnd finally, after so many hundreds of years, we have enacted the punishment and revenge of #E King Zhao#!. The regions of The #E Chu#! will remember this as the end of their treacherous dominance of the #E Yu#! region, as well as the beginning of a pepriod of #E Chu#! decline in the wake of #E Zhou#! reborn authority."
+ me_zhou_4.a:0 "An old tragedy, and new victory."
 
  me_zhou_5_title:0 "$zhou_missions_task_5$"
  me_zhou_5_desc:0 ""
@@ -265,11 +265,11 @@
  me_zhou_2003.b:0 ""
 
  me_zhou_21_title:0 "$zhou_missions_task_21$"
- me_zhou_21_desc:0 ""
- me_zhou_21.a:0 ""
+ me_zhou_21_desc:0 "None can deny now that the #E Mandate of Heaven#! has come back into the hands of the #E Zhourites#!. Surely, all thought it impossible. From a single city with no true power to the grandiose empire we see today. It is truly infathomable! We will remember the times of the #E Western Zhou#! as well as the times of the #E Eastern Zhou#!. However, as we usher in a new era of #E Zhou#! dominance, we are fit to remember that all these periods have belonged to our continous state, our great dynasty. A dynasty that has lived since the Age of Bronze. A dynasty that has never been extinguished despite the whole of #E China#! attempting to do just that.\n\nA dynasty that is filled with the sons of heaven itself."
+ me_zhou_21.a:0 "Long live the Zhou Dynasty!"
  
  me_zhou_90_title:0 "Sons of Heaven"
- me_zhou_90_desc:0 "The fall of the #E Western Zhou#! state was in many ways the beginning of the end. In the 7th century BCE, the final #E Western Zhou#! king, #E King You of Zhou#! replaced his consort with a concubine. The former queen's powerful father would lead a revolt in retaliation, joining with the #E Quanrong#! barbarians, and ultimately sacking the capital and killing #E King You#!. Afterwards, the crown prince #E Yiju#! would be selected as the new king. His new capital was to be #E Chengzhou#!, with the western capital being #E Wangcheng#! and eastern being #E Gong#!. Each city now is decentralized from being formerly united under one #E Zhou#! state. If there is to be a revival of #E Zhou#! dominance, all three capitals must be united."
+ me_zhou_90_desc:0 "The fall of the #E Western Zhou#! state was in many ways the beginning of the end. In the 8th century BCE, the final king from the #E Western Zhou Dynasty#!, #E King You of Zhou#! replaced his consort with a concubine. The former queen's powerful father would lead a revolt in retaliation, joining with the #E Quanrong#! barbarians, and ultimately sacking the capital and killing #E King You#!. Afterwards, the crown prince #E Yiju#! would be selected as the new king. His new capital was to be #E Chengzhou#!, with the western capital being #E Wangcheng#! and eastern being #E Gong#!. Each city now is decentralized from being formerly united under one #E Zhou#! state. If there is to be a revival of #E Zhou#! dominance, all three capitals must be united."
  me_zhou_90.a:0 "And so unite them we will."
 
  #Tooltips
@@ -281,7 +281,7 @@
  zhou_missions_task_2_claims: "Gain claims on [GetProvince('(int32)8384').GetArea.GetName|Y], [GetProvince('(int32)8393').GetArea.GetName|Y], [GetProvince('(int32)8958').GetArea.GetName|Y], and [GetProvince('(int32)8407').GetArea.GetName|Y]."
  zhou_missions_task_4_claims: "Gain claims on the territories of [GetCountry('SNG').GetName|Y]."
  zhou_missions_task_6_claims: "Gain claims on [GetProvince('(int32)8316').GetArea.GetName|Y], [GetProvince('(int32)8329').GetArea.GetName|Y], [GetProvince('(int32)8340').GetArea.GetName|Y], [GetProvince('(int32)8360').GetArea.GetName|Y], and [GetProvince('(int32)8285').GetArea.GetName|Y]."
- #zhou_missions_task_6_claims_2: "TODO CLAIMS"
+ zhou_missions_task_6_claims_2: "TODO CLAIMS"
  zhou_missions_task_7_claims: "Gain claims on the [GetProvince('(int32)8509').GetArea.GetRegion.GetName|Y]"
  zhou_missions_task_8_claims: "Gain claims on the territories of [GetCountry('CHU').GetName|Y]\nGain claims on the [GetProvince('(int32)8983').GetArea.GetRegion.GetName|Y]"
  zhou_missions_task_10_claims: "Gain claims on [GetProvince('(int32)8254').GetArea.GetName|Y], [GetProvince('(int32)8271').GetArea.GetName|Y], [GetProvince('(int32)8566').GetArea.GetName|Y], and [GetProvince('(int32)8577').GetArea.GetName|Y]."
