--- a/localization/english/missions/chinese_empire_missions_l_english.yml
+++ b/localization/english/missions/chinese_empire_missions_l_english.yml
@@ -117,55 +117,55 @@
  me_chinese_empire_9_desc: "Now that the #E Imperial Road#! system that was demanded by [ROOT.GetCountry.GetRuler.GetName] has been finished, the entirety of [ROOT.GetCountry.GetName] is benefitting from this initiative, which has done wonders to connect the far-flung corners of the Empire.\n\nNot only can the Imperial Armies quickly reach any troublesome regions within the Empire, but merchants and travelers are also using the highways for their own purposes. In short; the lands prosper, and everyone thanks the [ROOT.GetCountry.GetRulerTitle] for investing into infrastructure."
  me_chinese_empire_9.a: "May these roads service the people well"
 
- me_chinese_empire_10_title:0 "$missions_chinese_empire_task_10$"
- me_chinese_empire_10_desc:0 ""
- me_chinese_empire_10.a:0 ""
+ me_chinese_empire_10_title: "$missions_chinese_empire_task_10$"
+ me_chinese_empire_10_desc: "At last, everything is finished - the #E Terracotta Army#! has been built, and one of the greatest artistic accomplishments of the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] has been completed!"
+ me_chinese_empire_10.a: "After all of these years...finally!"
  
- me_chinese_empire_1000_title:0 "$missions_chinese_empire_task_10$"
- me_chinese_empire_1000_desc:0 ""
- me_chinese_empire_1000.a:0 ""
+ me_chinese_empire_1000_title: "$missions_chinese_empire_task_10$"
+ me_chinese_empire_1000_desc: "[ROOT.GetCountry.GetRuler.GetName], in order to honor [ROOT.GetCountry.GetRuler.GetHerHis] predecessor, has agreed to construct a massive mausoleum as the final resting place of the previous [ROOT.GetCountry.GetRulerTitle]. Not only shall an impressive tomb be constructed, but a vast #E Terracotta Army#!, one that shall stand eternal guard protecting the tomb of our esteemed forebear, will be built as well.\n\nAlthough this will take some time to complete, [ROOT.GetCountry.GetRuler.GetName] has asked that [ROOT.GetCountry.GetRuler.GetSheHe] be kept informed of its progress."
+ me_chinese_empire_1000.a: "The cost is absolutely nothing to me..."
  
- me_chinese_empire_1001_title:0 "$missions_chinese_empire_task_10$"
- me_chinese_empire_1001_desc:0 ""
- me_chinese_empire_1001.a:0 ""
+ me_chinese_empire_1001_title: "$missions_chinese_empire_task_10$"
+ me_chinese_empire_1001_desc: "A quick note from the engineers constructing the #E Terracotta Army#!; work goes well. The foundations of the mausoleum have been finally built, and now the grand marble edifice is being constructed. It will still be many years before everything is finished."
+ me_chinese_empire_1001.a: "Very good, very good"
  
- me_chinese_empire_1002_title:0 "$missions_chinese_empire_task_10$"
- me_chinese_empire_1002_desc:0 ""
- me_chinese_empire_1002.a:0 ""
+ me_chinese_empire_1002_title: "$missions_chinese_empire_task_10$"
+ me_chinese_empire_1002_desc: "I know it has been some time since the construction of the #E Terracotta Army#! has commenced, but I must inform you, [ROOT.GetCountry.GetRuler.GetName], that the mausoleum has finally been finished, and it is undoubtedly one of the finest structures in all of [ROOT.GetCountry.GetName].\n\nNow, the work on the terracotta soldiers is starting, but this will take just as long, if not longer, to finish."
+ me_chinese_empire_1002.a: "Slow and steady wins the race, I am told"
  
- me_chinese_empire_1003_title:0 "$missions_chinese_empire_task_10$"
- me_chinese_empire_1003_desc:0 ""
- me_chinese_empire_1003.a:0 ""
+ me_chinese_empire_1003_title: "$missions_chinese_empire_task_10$"
+ me_chinese_empire_1003_desc: "A message from the craftsmen that are working on the #E Terracotta Army#! - they are about halfway done with the soldiers themselves, and promise that everything will be worth the wait."
+ me_chinese_empire_1003.a: "Yes, I am sure that it will"
  
- me_chinese_empire_1004_title:0 "$missions_chinese_empire_task_10$"
- me_chinese_empire_1004_desc:0 ""
- me_chinese_empire_1004.a:0 ""
+ me_chinese_empire_1004_title: "$missions_chinese_empire_task_10$"
+ me_chinese_empire_1004_desc: "It won't be too much longer until the #E Terracotta Army#! is finished, [ROOT.GetCountry.GetRuler.GetName] - you can expect a message any day now with news of its completion."
+ me_chinese_empire_1004.a: "I cannot wait for this task to be completed!"
 
- me_chinese_empire_11_title:0 "$missions_chinese_empire_task_11$"
- me_chinese_empire_11_desc:0 ""
- me_chinese_empire_11.a:0 ""
+ me_chinese_empire_11_title: "$missions_chinese_empire_task_11$"
+ me_chinese_empire_11_desc: "At the bidding of our Chancellor, [ROOT.GetCountry.GetRuler.GetName] has agreed to send envoys west to [GetCountry('TAY').GetName], for it is said that [GetCountry('TAY').GetRuler.GetName] is in possession of magnificent beasts known as #E Heavenly Horses#! that are rumored to be the deadliest mounts in the entire world. These powerful animals have brought strength to the armies of the barbarians, and [ROOT.GetCountry.GetRuler.GetFirstName] must have them for the soldiers of [ROOT.GetCountry.GetName]!"
+ me_chinese_empire_11.a: "Flatter the barbarians with gold and bring me their submission!"
  
- me_chinese_empire_1100_title:0 "$missions_chinese_empire_task_11$"
- me_chinese_empire_1100_desc:0 ""
- me_chinese_empire_1100.a:0 ""
- me_chinese_empire_1100.b:0 ""
+ me_chinese_empire_1100_title: "$missions_chinese_empire_task_11$"
+ me_chinese_empire_1100_desc: "[ROOT.GetCountry.GetRuler.GetName], we have received envoys far from the east, from the great #E Chinese Empire#! that has united the #E Middle Kingdom#! into one. They have heard of the quality of our horses and desire them; so much, in fact, that they have sent us a massive fortune.\n\nTheir chief diplomat, who is apparently their Chancellor, has privately made it known that we could submit to their Empire if we so choose...and if we do not, they will claim our lands just the same."
+ me_chinese_empire_1100.a: "There isn't really much of a choice, is there?"
+ me_chinese_empire_1100.b: "We do not submit to any Emperor!"
  
- me_chinese_empire_1101_title:0 "$missions_chinese_empire_task_11$"
- me_chinese_empire_1101_desc:0 ""
- me_chinese_empire_1101.a:0 ""
+ me_chinese_empire_1101_title: "$missions_chinese_empire_task_11$"
+ me_chinese_empire_1101_desc: "Our Chancellor has returned from the barbarous realm of [GetCountry('TAY').GetName] with excellent news - [GetCountry('TAY').GetRuler.GetName], overwhelmed by the splendor and majesty of our [ROOT.GetCountry.GetRulerTitle], agreed to become our tributary. It seems that [ROOT.GetCountry.GetRuler.GetName] has secured the source of the #E Heavenly Horses#! for [ROOT.GetCountry.GetName]."
+ me_chinese_empire_1101.a: "All your horses belong to us!"
  
- me_chinese_empire_1102_title:0 "$missions_chinese_empire_task_11$"
- me_chinese_empire_1102_desc:0 ""
- me_chinese_empire_1102.a:0 ""
+ me_chinese_empire_1102_title: "$missions_chinese_empire_task_11$"
+ me_chinese_empire_1102_desc: "[ROOT.GetCountry.GetRuler.GetName], [GetCountry('TAY').GetRuler.GetName] of [GetCountry('TAY').GetName] received our diplomats with grace, but unfortunately for us, they did not agree to become our tributary. If we desire the land of the #E Heavenly Horses#!, then we must seize it for ourselves."
+ me_chinese_empire_1102.a: "We shall take what we want when it is time"
 
- me_chinese_empire_12_title:0 "$missions_chinese_empire_task_12$"
- me_chinese_empire_12_desc:0 ""
- me_chinese_empire_12.a:0 ""
- me_chinese_empire_12.b:0 ""
+ me_chinese_empire_12_title: "$missions_chinese_empire_task_12$"
+ me_chinese_empire_12_desc: "We have received envoys from the west in [ROOT.GetCountry.GetCapital.GetName] - strange folk that are dressed like barbarians and have to communicate through interpreters, but are respectful and interested in bartering. Even [ROOT.GetCountry.GetRuler.GetName] acknowledges that [ROOT.GetCountry.GetRuler.GetSheHe] had heard of their talents, for these barbarians are said to be fine trainers of animals, and [ROOT.GetCountry.GetRuler.GetFirstName] desires their so-called #E 'Heavenly Horses'#! for [ROOT.GetCountry.GetName].\n\nBusiness transactions were completed, and as the barbarians prepared to return to their home, a place they called [GetProvince('(int32)6734').GetName], their chief diplomat said that there was a treasure for sale in their city, and if we paid one hundred gold coins, it would be ours. They promised to return with the statue in a few months."
+ me_chinese_empire_12.a: "Send them the gold - I am curious about this treasure"
+ me_chinese_empire_12.b: "We shall just take the Heavenly Horses"
  
- me_chinese_empire_1200_title:0 ""
- me_chinese_empire_1200_desc:0 ""
- me_chinese_empire_1200.a:0 ""
+ me_chinese_empire_1200_title: "Men Of Their Word"
+ me_chinese_empire_1200_desc: "Although some living within [ROOT.GetCountry.GetCapital.GetName] doubted that the western barbarians would return with their treasure that they had promised to sell to [ROOT.GetCountry.GetRuler.GetName], the [ROOT.GetCountry.GetRulerTitle] never doubted the honorable intentions of the foreigners - [ROOT.GetCountry.GetRuler.GetSheHe] was a fine judge of character and knew that these merchants were honest men.\n\nA few short months later, [ROOT.GetCountry.GetRuler.GetFirstName] did not gloat when it was reported within the palace that the traders had returned to the capital with what they promised."
+ me_chinese_empire_1200.a: "I never doubted them once..."
 
  me_chinese_empire_13_title: "$missions_chinese_empire_task_13$"
  me_chinese_empire_13_desc: "Now that the internal situation of [ROOT.GetCountry.GetName] has stabilized to the point that [ROOT.GetCountry.GetRuler.GetName] can afford to turn [ROOT.GetCountry.GetRuler.GetHerHis] attention elsewhere, it has been decided that the Imperial Armies shall march to the east. The [ROOT.GetCountry.GetRulerTitle] has decreed that no barbarous kingdoms will be allowed to be on the periphery of the glorious [ROOT.GetCountry.GetAdjective] imperium - the region of #E Jin#! will be ours."
@@ -211,13 +211,13 @@
  me_chinese_empire_23_desc: "After many years of laboring, the glorious [ROOT.GetCountry.GetAdjective] [ROOT.GetCountry.GetRulerTitle] [ROOT.GetCountry.GetRuler.GetName] has finally completed all of the reforms that [ROOT.GetCountry.GetRuler.GetSheHe] set out long ago to achieve.\n\nAll throughout the lands of [ROOT.GetCountry.GetName], [ROOT.GetCountry.GetRuler.GetFirstName] is praised as the greatest of all [ROOT.GetCountry.GetRulerTitle] to rule over the #E Middle Kingdom#!, and there is no doubt within [ROOT.GetCountry.GetRuler.GetFirstName]'s mind that they have changed the course of history. The towns and cities prosper, the armies protect the peace, trade flows into [ROOT.GetCountry.GetCapital.GetName], the proper religious rites are observed, and our civilization shines above all others."
  me_chinese_empire_23.a: "All glory to the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] and [ROOT.GetCountry.GetRulerTitle] [ROOT.GetCountry.GetRuler.GetFirstName]!"
  
- me_chinese_empire_24_title:0 "$missions_chinese_empire_task_24$"
- me_chinese_empire_24_desc:0 ""
- me_chinese_empire_24.a:0 ""
+ me_chinese_empire_24_title: "$missions_chinese_empire_task_24$"
+ me_chinese_empire_24_desc: "Even [ROOT.GetCountry.GetRuler.GetName] is surprised by how successful the #E Lingqu Canal#! has been - it has quickly become an important waterway that the people of [ROOT.GetCountry.GetName] have come to rely upon.\n\nThis so-called #E 'Magic Canal#!, a nickname that the common citizens have bestowed, has brought trade and travelers to the region - so many, in fact, that a city must be built to accomodate them. Everyone praises [ROOT.GetCountry.GetRuler.GetFirstName] for [ROOT.GetCountry.GetRuler.GetHerHis] vision in building such a masterwork."
+ me_chinese_empire_24.a: "The credit must be given to the hardworking people"
  
- me_chinese_empire_2400_title:0 "$missions_chinese_empire_task_24$"
- me_chinese_empire_2400_desc:0 ""
- me_chinese_empire_2400.a:0 ""
+ me_chinese_empire_2400_title: "$missions_chinese_empire_task_24$"
+ me_chinese_empire_2400_desc: "After toying with the idea for a long time, [ROOT.GetCountry.GetRuler.GetName] has definitively decided to construct a canal that will connect the #E Xiang River#! to the #E Li River#!. This vast undertaking will require the labor of thousands of men, but thankfully, [ROOT.GetCountry.GetName] has the manpower available for such a task."
+ me_chinese_empire_2400.a: "The work that you are doing is vital - know this"
  
  me_chinese_empire_90_title: "The Empire of China"
  me_chinese_empire_90_desc: "After many years of ruinous warfare that spread death and devastation across the entirety of the #E Middle Kingdom#!, [ROOT.GetCountry.GetRuler.GetName] has defeated all other claimants to the throne and has established [ROOT.GetCountry.GetRuler.GetHerHim]self as the true [ROOT.GetCountry.GetRulerTitle] of All China.\n\nBut receiving the #E Mandate of Heaven#! is only half of it; keeping it is an entirely different matter altogether. If [ROOT.GetCountry.GetRuler.GetFirstName] desires to see the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] remembered as the greatest rulers that #E Zhongguo#! has ever had, then there is plenty that must be accomplished."
@@ -257,7 +257,7 @@
  
  #Treasures
  flying_horse_china: "Flying Horse Statue"
- flying_horse_china_desc: "TODO"
+ flying_horse_china_desc: "An expertly-crafted statue of a horse in full gallop, manufactured by Greek artisans living in Damna."
  
  #Terracotta  Army
  terracotta_army_wonder: "Mausoleum of the First Emperor"
@@ -279,15 +279,15 @@
  pure_land_china: "Purified Land"
  divine_favour_china: "Divine Favor"
  magic_canal_china: "Magic Canal"
- desc_restored_wall_empire_missions: "TODO MOD"
+ desc_restored_wall_empire_missions: "An impressive series of fortifications have been built in order to halt the advance of the northern barbarians."
  desc_civilization_effort_nanzhong: "Our Imperial agents are doing their best to bring civilization to the barbaric mountain tribes."
- desc_imperial_road_china: "TODO MOD"
- desc_heavenly_horses_mod: "TODO MOD"
- desc_salt_manufactories_chinese_empire: "TODO MOD"
- desc_silk_manufactories_chinese_empire: "TODO MOD"
- desc_meritocracy_corruption_mod: "TODO MOD"
- desc_commanderies_chinese_mod: "TODO MOD"
- desc_sail_china_sail: "TODO MOD"
- desc_pure_land_china: "TODO MOD"
- desc_divine_favour_china: "TODO MOD"
- desc_magic_canal_china: "TODO MOD"
+ desc_imperial_road_china: "Our efforts at building roads throughout the Middle Kingdom bring glory and wealth to the people."
+ desc_heavenly_horses_mod: "The legendary Heavenly Horses from the west have strengthened our armies."
+ desc_salt_manufactories_chinese_empire: "This province has been directed by the Emperor to focus their production on salt."
+ desc_silk_manufactories_chinese_empire: "This province has been directed by the Emperor to focus their production on silk."
+ desc_meritocracy_corruption_mod: "In order to combat the corrupting influences of nepotism, we have implemented a system based on merit and personal worth."
+ desc_commanderies_chinese_mod: "This province is home to a special Chinese Commandery."
+ desc_sail_china_sail: "Our bold sailors have been given the command to sail far and wide, searching for whatever they can find."
+ desc_pure_land_china: "Our land has been ritually purified and cleansed from the stains of war and destruction."
+ desc_divine_favour_china: "The gods have turned their faces towards the people of the Middle Kingdom, blessing them beyond all others."
+ desc_magic_canal_china: "The Lingqu Canal has brought countless blessings to this region."
