--- a/localization/english/missions/wei_missions_l_english.yml
+++ b/localization/english/missions/wei_missions_l_english.yml
@@ -136,7 +136,7 @@
  me_wei_14.a: "Wars come and go, but architecture is a permanent legacy"
 
  me_wei_15_title: "$wei_missions_task_15$"
- me_wei_15_desc: "When the territories of #E Jin#! were split, hacked to pieces as though a butcher had taken a cleaver to the borders, most people living in the Middle Kingdom never could have imagined that a personality would be able to put together what was sundered so long ago.\n\nBut [ROOT.GetCountry.GetRuler.GetName] is unlike any other ruler that [ROOT.GetCountry.GetName] has ever had; not only has [ROOT.GetCountry.GetRuler.GetSheHe] managed to lose the shameful legacy of our past defeats, but the bold [ROOT.GetCountry.GetRulerTitle] has restored Jin. The immortal deeds and accomplishments of [ROOT.GetCountry.GetRuler.GetFirstName] shall go down in the histories as the Promised One that corrected the mistakes of the past."
+ me_wei_15_desc: "When the territories of #E Jin#! were split, hacked to pieces as though a butcher had taken a cleaver to the borders, most people living in the Middle Kingdom never could have imagined that a personality would be able to put together what was sundered so long ago.\n\nBut [ROOT.GetCountry.GetRuler.GetName] is unlike any other ruler that [ROOT.GetCountry.GetName] has ever had; not only has [ROOT.GetCountry.GetRuler.GetSheHe] managed to lose the shameful legacy of our past defeats, but the bold [ROOT.GetCountry.GetRulerTitle] has restored Jin. The immortal deeds of [ROOT.GetCountry.GetRuler.GetFirstName] shall go down in the histories as the legendary accomplishments of the Promised One that corrected the mistakes of the past."
  me_wei_15.a: "The shades of my ancestors are pleased by my accomplishments"
 
  me_wei_16_title: "$wei_missions_task_16$"
